# src/server/controllers/EditorService.js
@@ -25,7 +25,13 @@ exports.exercisesGET = function(args, res, next) {
       lessonId: args.lesson_id.value
     }
   }).then(function(exercises) {
-    ret['application/json'] = exercises.map((d) => d.get('id'));
+    ret['application/json'] = exercises.map((d) => ({
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "lesson": null2Undefined(d.get('lessonId'))
+    }));
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   }, function(reason) {
@@ -40,11 +46,17 @@ exports.exercisesIdDELETE = function(args, res, next) {
    * id Integer ID of exercise
    * returns String
    **/
+  var ret = {};
+
   Exercise.destroy({
     where: {
       id: args.id.value
     }
   });
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.exercisesIdGET = function(args, res, next) {
@@ -62,14 +74,15 @@ exports.exercisesIdGET = function(args, res, next) {
     }
   }).then(function(d) {
     if (d === null) {
-      Errors.emitHttpError(404, res, 'Cannot find id.');
+      Errors.emitHttpError(res, { code: 404, message: 'Cannot find id.' });
       return;
     }
     ret['application/json'] = {
-      "id": d.get('id'),
-      "name": d.get('name'),
-      "path": d.get('path'),
-      "lesson": d.get('lessonId')
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "lesson": null2Undefined(d.get('lessonId'))
     };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
@@ -85,12 +98,18 @@ exports.exercisesPOST = function(args, res, next) {
    * body Body_3 Exercise with default ID to be added
    * returns String
    **/
+  var ret = {};
+
   Exercise.create({
     name: args.body.value.name,
     path: args.body.value.path,
+    description: args.body.value.description,
     lessonId: args.body.value.lesson
+  }).then((d) => {
+    ret['application/json'] = d.get('id');
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-  res.end();
 }
 
 exports.exercisesPUT = function(args, res, next) {
@@ -100,16 +119,22 @@ exports.exercisesPUT = function(args, res, next) {
    * body Body_2 Exercise with given ID to be updated
    * returns String
    **/
+  var ret = {};
+
   Exercise.update({
     name: args.body.value.name,
     path: args.body.value.path,
+    description: args.body.value.description,
     lessonId: args.body.value.lesson
   }, {
     where: {
       id: args.body.value.id
     }
   });
-  res.end();
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.lessonsGET = function(args, res, next) {
@@ -121,7 +146,12 @@ exports.lessonsGET = function(args, res, next) {
   var ret = {};
 
   Lesson.findAll().then(function(lessons) {
-    ret['application/json'] = lessons.map((d) => d.get('id'));
+    ret['application/json'] = lessons.map((d) => ({
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description'))
+    }));
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   }, function(reason) {
@@ -136,11 +166,17 @@ exports.lessonsIdDELETE = function(args, res, next) {
    * id Integer ID of lesson
    * returns String
    **/
+  var ret = {};
+
   Lesson.destroy({
     where: {
       id: args.id.value
     }
   });
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.lessonsIdGET = function(args, res, next) {
@@ -158,13 +194,14 @@ exports.lessonsIdGET = function(args, res, next) {
     }
   }).then(function(d) {
     if (d === null) {
-      Errors.emitHttpError(404, res, 'Cannot find id.');
+      Errors.emitHttpError(res, { code: 404, message: 'Cannot find id.' });
       return;
     }
     ret['application/json'] = {
-      "id": d.get('id'),
-      "name": d.get('name'),
-      "path": d.get('path')
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description'))
     };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
@@ -180,11 +217,16 @@ exports.lessonsPOST = function(args, res, next) {
    * body Body_5 Lesson with default ID to be added
    * returns String
    **/
+  var ret = {};
+
   Lesson.create({
     name: args.body.value.name,
     path: args.body.value.path
+  }).then((d) => {
+    ret['application/json'] = d.get('id');
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-  res.end();
 }
 
 exports.lessonsPUT = function(args, res, next) {
@@ -194,6 +236,8 @@ exports.lessonsPUT = function(args, res, next) {
    * body Body_4 Lesson with given ID to be updated
    * returns String
    **/
+  var ret = {};
+
   Lesson.update({
     name: args.body.value.name,
     path: args.body.value.path
@@ -202,7 +246,10 @@ exports.lessonsPUT = function(args, res, next) {
       id: args.body.value.id
     }
   });
-  res.end();
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.questionsGET = function(args, res, next) {
@@ -219,7 +266,20 @@ exports.questionsGET = function(args, res, next) {
       exerciseId: args.exercise_id.value
     }
   }).then(function(questions) {
-    ret['application/json'] = questions.map((d) => d.get('id'));
+    ret['application/json'] = questions.map((d) => ({
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "events_t": null2Undefined(d.get('events_t')),
+      "events_options": null2Undefined(d.get('events_options')),
+      "content_t": null2Undefined(d.get('content_t')),
+      "content_options": null2Undefined(d.get('content_options')),
+      "directions": null2Undefined(d.get('directions')),
+      "notes": null2Undefined(d.get('notes')),
+      "script": null2Undefined(d.get('script')),
+      "exercise": null2Undefined(d.get('exerciseId'))
+    }));
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   }, function(reason) {
@@ -234,11 +294,17 @@ exports.questionsIdDELETE = function(args, res, next) {
    * id Integer ID of question
    * returns String
    **/
+  var ret = {};
+
   Question.destroy({
     where: {
       id: args.id.value
     }
   });
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
 }
 
 exports.questionsIdGET = function(args, res, next) {
@@ -256,14 +322,22 @@ exports.questionsIdGET = function(args, res, next) {
     }
   }).then(function(d) {
     if (d === null) {
-      Errors.emitHttpError(404, res, 'Cannot find id.');
+      Errors.emitHttpError(res, { code: 404, message: 'Cannot find id.' });
       return;
     }
     ret['application/json'] = {
-      "id": d.get('id'),
-      "name": d.get('name'),
-      "path": d.get('path'),
-      "exercise": d.get('exerciseId')
+      "id": null2Undefined(d.get('id')),
+      "name": null2Undefined(d.get('name')),
+      "path": null2Undefined(d.get('path')),
+      "description": null2Undefined(d.get('description')),
+      "events_t": null2Undefined(d.get('events_t')),
+      "events_options": null2Undefined(d.get('events_options')),
+      "content_t": null2Undefined(d.get('content_t')),
+      "content_options": null2Undefined(d.get('content_options')),
+      "directions": null2Undefined(d.get('directions')),
+      "notes": null2Undefined(d.get('notes')),
+      "script": null2Undefined(d.get('script')),
+      "exercise": null2Undefined(d.get('exerciseId'))
     };
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
@@ -279,12 +353,25 @@ exports.questionsPOST = function(args, res, next) {
    * body Body_1 Question with default ID to be added
    * returns String
    **/
+  var ret = {};
+
   Question.create({
     name: args.body.value.name,
     path: args.body.value.path,
+    description: args.body.value.description,
+    events_t: args.body.value.events_t,
+    events_options: args.body.value.events_options,
+    content_t: args.body.value.content_t,
+    content_options: args.body.value.content_options,
+    directions: args.body.value.directions,
+    notes: args.body.value.notes,
+    script: args.body.value.script,
     exerciseId: args.body.value.exercise
+  }).then((d) => {
+    ret['application/json'] = d.get('id');
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
   });
-  res.end();
 }
 
 exports.questionsPUT = function(args, res, next) {
@@ -294,14 +381,34 @@ exports.questionsPUT = function(args, res, next) {
    * body Body Question with given ID to be updated
    * returns String
    **/
+  var ret = {};
+
   Question.update({
     name: args.body.value.name,
     path: args.body.value.path,
+    description: args.body.value.description,
+    events_t: args.body.value.events_t,
+    events_options: args.body.value.events_options,
+    content_t: args.body.value.content_t,
+    content_options: args.body.value.content_options,
+    directions: args.body.value.directions,
+    notes: args.body.value.notes,
+    script: args.body.value.script,
     exerciseId: args.body.value.exercise
   }, {
     where: {
       id: args.body.value.id
     }
   });
-  res.end();
+
+  ret['application/json'] = { "code": 200 };
+  res.setHeader('Content-Type', 'application/json');
+  res.end(JSON.stringify(ret[Object.keys(ret)[0]] || {}, null, 2));
+}
+
+let null2Undefined = function(v) {
+  if (v === null) {
+    return undefined;
+  }
+  return v;
 }
